--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     },
     "require": {
         "slim/slim": "^3.0",
-        "vlucas/phpdotenv": "^3.0"
+        "vlucas/phpdotenv": "^3.0",
+        "monolog/monolog": "^1.24"
     }
 }
