--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 version: '2'
 services:
 
+  db:
+    image: mysql:5.6
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./volume:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+      
   app:
-    image: ambientum/php:7.0-apache
+    image: ambientum/php:7.1-apache
     container_name: app
     volumes:
       - .:/var/www/app/public
     ports:
       - "8090:8080"
+    links:
+      - db
+      
