--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,14 @@ services:
       - "8090:8080"
     links:
       - db
+
+  phpMyAdmin:
+    image: phpmyadmin/phpmyadmin:4.6
+    container_name: pma
+    links:
+      - db
+    ports:
+      - 3000:80
+    environment:
+      - PMA_ARBITRARY=1
       
